Going deeper into implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
+auth0:
+audience: {yourApiIdentifier}
+spring:
+security:
+oauth2:
+resourceserver:
+jwt:
+issuer-uri: https://{yourDomain}/
